--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-<div style="background: linear-gradient(90deg, #ff0000, #00ff00, #0000ff; height: 50%; width: 100%;"></div>
-<div style="background: linear-gradient(90deg, #0000ff, #00ff00, #ff0000; height: 50%; width: 100%;"></div>
+<div style="background: linear-gradient(90deg, #100, #00f, #0f0); height: 1000px;" id="nnnn"></div>
 </body>
 </html>
