--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
     <abbr title="This is a banner">
-        <div style="background-attachment: fixed; background-image: url('Media/Banner.png'); height: 900px; background-position: center; background-repeat: no-repeat; background-size: cover;">
+        <div style="background-attachment: fixed; background-image: url('Media/Banner.jpg'); height: 900px; background-position: center; background-repeat: no-repeat; background-size: cover;">
         </div>
     </abbr>
 
