--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- The Left Button-->
             <button onclick="GoRight()" style="height: 20px; width: 60px; background-color: var(--ComponentColor1);"></button>
             
-            <span style="width: 500px; color: var(--ThemeColor1);">hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</span>
+            <span style="width: 500px; color: var(--ThemeColor1);">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
 
             <!-- The Right Button-->
             <button onclick="GoLeft()" style="height: 20px; width: 60px; background-color: var(--ComponentColor1);"></button>
