--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="description" content="WhiteQuotes Is Happy">
+    <meta name="keywords" content="white quotes github io Useless,white quotes, github, io, Useless">
 
     <!-- Fonts -->
 
