--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div style="background: linear-gradient(90deg, #000000, #ffffff); height: 90px;" id="GradientOfGod"></div>
     
     </div>
-    <button onclick="Just_Copy()">Copy My Name</button>
+    <button id="Copyier">Copy My Name</button>
 
      <!-- Container 3-->
 
