--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
      <!-- Container 3-->
-    <div class="ContainerEven" style="height: auto; padding: 50px;"><iframe frameborder="0" src="https://itch.io/embed/948060?bg_color=1b1c20&amp;fg_color=ec352e&amp;link_color=ffffff&amp;border_color=ec352e" width="552" height="167"><a href="https://whitequotes.itch.io/musical-stick">Musical Stick by WhiteQuotes</a></iframe></div>
+    <div class="ContainerOdd" style="height: auto; padding: 50px;"><iframe frameborder="0" src="https://itch.io/embed/948060?bg_color=1b1c20&amp;fg_color=ec352e&amp;link_color=ffffff&amp;border_color=ec352e" width="552" height="167"><a href="https://whitequotes.itch.io/musical-stick">Musical Stick by WhiteQuotes</a></iframe></div>
 
 
 
